--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = "2.33.3"
 itertools = "0.10.0"
 regex = "1.4.5"
+structopt = "0.3.21"
 
 [lib]
-name = "aoc"
+name = "aoclib"
+path = "src/aoclib.rs"
+
+[[bin]]
+name = "aoc2021"
 path = "src/aoc.rs"
