--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = "2.33.3"
+hashbrown = "0.11.2"
 itertools = "0.10.0"
 regex = "1.4.5"
 structopt = "0.3.21"
