Move sample input
Name top dir inputs instead of day to clarify that it does not contain
code or any other resources for a given day.

Zero pad numbers to make them sort and line up nicely in lists.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-day/*/input.txt filter=lfs diff=lfs merge=lfs -text
+inputs/*/input*.txt filter=lfs diff=lfs merge=lfs -text
 Cargo.lock filter=lfs diff=lfs merge=lfs -text
