--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Integrate
 
 on:
   push:
@@ -10,7 +10,7 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  aio:
+  integrate:
     runs-on: ubuntu-20.04
 
     steps:
@@ -26,7 +26,5 @@ jobs:
         run: cargo clippy
       - name: Check tests
         run: cargo test --verbose
-      - name: Publish (dry-run)
-        env:
-          CARGO_REGISTRY_TOKEN: ${{secrets.cargo_registry_token}}
+      - name: Check publish
         run: cargo publish --dry-run
