--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-inputs/*/input*.txt filter=lfs diff=lfs merge=lfs -text
+inputs/*/*/input*.txt filter=lfs diff=lfs merge=lfs -text
 Cargo.lock filter=lfs diff=lfs merge=lfs -text
 screenshot.png filter=lfs diff=lfs merge=lfs -text
