Create simple webapp showcasing the program
Put the webapp in its own crate to increase separation and because I
anticipate adding more crates such as maybe a proc macro.

Call the crates directory crates because it mirrors the name packages
that I am used to from python workspace repos and it is the name used
by cargo.

Move aoclib into crates for consistency.

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Check tests
         run: cargo test --verbose
       - name: Check publish
-        run: cargo publish --dry-run --allow-dirty
+        run: cargo publish --dry-run --allow-dirty --package aocoracle
