--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Publish
         env:
           CARGO_REGISTRY_TOKEN: ${{secrets.cargo_registry_token}}
-        run: cargo publish
+        run: cargo publish --allow-dirty --package aocoracle
