--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,5 @@
-[package]
-name = "aocoracle"
-version = "0.1.2"
-edition = "2021"
-description = "Universal solver for advent of code problems"
-license = "MIT"
-exclude = [".*","inputs/"]
-
-[dependencies]
-clap = "2.33.3"
-env_logger = "0.9.0"
-glob = "0.3.0"
-hashbrown = "0.11.2"
-itertools = "0.10.0"
-log = "0.4.14"
-regex = "1.4.5"
-serde = {version ="1", features = ["derive"]}
-serde_json = "1.0.87"
-structopt = "0.3.21"
-
-[lib]
-name = "aoclib"
-path = "src/aoclib.rs"
-
-[[bin]]
-name = "aocoracle"
-path = "src/aoc.rs"
+[workspace]
+members = [
+    "crates/aocoracle",
+    "crates/webapp",
+]
