--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 inputs/*/*/input*.txt filter=lfs diff=lfs merge=lfs -text
 Cargo.lock filter=lfs diff=lfs merge=lfs -text
 screenshot.png filter=lfs diff=lfs merge=lfs -text
+6bb0c0bd67.txt filter=lfs diff=lfs merge=lfs -text
