--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Check tests
         run: cargo test --verbose
       - name: Check publish
-        run: cargo publish --dry-run
+        run: cargo publish --dry-run --allow-dirty
