--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ exclude = [".*","inputs/"]
 [dependencies]
 clap = "2.33.3"
 env_logger = "0.9.0"
+glob = "0.3.0"
 hashbrown = "0.11.2"
 itertools = "0.10.0"
 log = "0.4.14"
