Run clippy with --tests
Without that flag, code that is disabled with #[cfg(test)] is not
linted.

Also add some make shortcuts to make it easier to remember to run the
formatting and lint checks properly.

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Build
         run: cargo build --verbose
       - name: Check format
-        run: cargo fmt -- --check
+        run: cargo fmt --check
       - name: Check lint
-        run: cargo clippy
+        run: cargo clippy --tests
       - name: Check tests
         run: cargo test --verbose
       - name: Check publish
