--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ hashbrown = "0.11.2"
 itertools = "0.10.0"
 log = "0.4.14"
 regex = "1.4.5"
+serde = {version ="1", features = ["derive"]}
 serde_json = "1.0.87"
 structopt = "0.3.21"
 
