--- a/crates/aocoracle/Cargo.toml
+++ b/crates/aocoracle/Cargo.toml
@@ -17,6 +17,7 @@ regex = "1.4.5"
 serde = {version ="1", features = ["derive"]}
 serde_json = "1.0.87"
 structopt = "0.3.21"
+thiserror = "1.0.37"
 
 [lib]
 name = "aoclib"
