--- a/crates/aocoracle/Cargo.toml
+++ b/crates/aocoracle/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 exclude = [".*"]
 
 [dependencies]
+anyhow = {version="1.0.66", features=["backtrace"]}
 clap = "2.33.3"
 env_logger = "0.9.0"
 glob = "0.3.0"
