Add data as submodule
The inputs should not be published so they are kept separately in a
private repo.

A classic PAT for machine user aocoracle is used to authenticate. The
machine user is added as collaborator to this repo and the submodule
repo.

--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           lfs: true
+          submodules: recursive
+          token: ${{ secrets.AOCORACLE_PAT }}
       - name: Build
         run: cargo build --verbose
       - name: Check format
