--- a/crates/aocoracle/Cargo.toml
+++ b/crates/aocoracle/Cargo.toml
@@ -14,6 +14,7 @@ glob = "0.3.0"
 hashbrown = "0.11.2"
 itertools = "0.10.0"
 log = "0.4.14"
+pathfinding = "4.0.0"
 regex = "1.4.5"
 serde = {version ="1", features = ["derive"]}
 serde_json = "1.0.87"
