Add type and lint checking for python code
... to make it easier to ensure that scripts work without testing them
extensively. This is good because there is not infrastructure in the
project for unit testing them and they generally deal with things that
are annoying to unit test such as downloading and parsing files from
internet.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,13 @@
 [tool.isort]
 line_length = 88
 profile = "black"
+
+[tool.mypy]
+disallow_untyped_defs = true
+
+[[tool.mypy.overrides]]
+module = [
+    'fire',
+    'requests'
+]
+ignore_missing_imports = true
