Convert some unit tests to examples
... to make it easier to get view the printed table and to run these
tests with the release profile.

Once built the example takes 10s in release mode compared to 170s with
the dev profile

--- a/crates/aocoracle/Cargo.toml
+++ b/crates/aocoracle/Cargo.toml
@@ -21,6 +21,9 @@ serde_json = "1.0.87"
 structopt = "0.3.21"
 thiserror = "1.0.37"
 
+[dev-dependencies]
+aocdata = {path = "../aocdata"}
+
 [lib]
 name = "aoclib"
 path = "src/aoclib.rs"
