--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -25,8 +25,13 @@ jobs:
       - name: Check format
         run: cargo fmt --check
       - name: Check lint
-        run: cargo clippy --tests
+        run:
+          cargo clippy
+          cargo clippy --examples
+          cargo clippy --tests
       - name: Check tests
-        run: cargo test --verbose
+        run:
+          cargo test --verbose
+          cargo test --verbose --examples --release
       - name: Check publish
         run: cargo publish --dry-run --allow-dirty --package aocoracle
