--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ disallow_untyped_defs = true
 
 [[tool.mypy.overrides]]
 module = [
+    'bar_chart_race',
     'fire',
-    'requests'
+    'requests',
 ]
 ignore_missing_imports = true
